# sedona

./: CMakeLists.txt
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  FindEigen3.cmake
benchmark/2Rot1Pris/: CMakeLists.txt  benchmark_2rot1pris.cpp  benchmark_2rot1pris.h
include/: mt_okc.h  okc.h  okc_differential_types.h  okc_link.h  okc_math.h  okc_types.h
include/sedona/: mt_okc.h  okc.h  okc_differential_types.h  okc_link.h  okc_math.h  okc_system.h  okc_types.h  sedona.h  sedona_config.h
test/: CMakeLists.txt  main.cpp
test/2Rot1Pris/: test_2rot1pris.cpp
test/2Rot1Pris/codegen/: doublePendulumDerivative.cpp  doublePendulumDerivative.h  doublePendulumDerivative_data.cpp  doublePendulumDerivative_data.h  doublePendulumDerivative_initialize.cpp  doublePendulumDerivative_initialize.h  doublePendulumDerivative_rtw.mk  doublePendulumDerivative_terminate.cpp  doublePendulumDerivative_terminate.h  doublePendulumDerivative_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
